[project]
name = "resume-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.3.2",
    "langchain-community>=0.3.11",
    "langchain>=0.3.11",
    "pydantic==2.10.1",
    "openai>=1.57.3",
    "pydantic-ai>=0.0.12",
]
